[package]
name = "zenv"
version = "0.1.0"
edition = "2021"
description = "Zero-config developer secret injection runtime with E2EE"
license = "MIT"
repository = "https://github.com/arvytechnolgies/zenv"
homepage = "https://zeroconfig.netlify.app"
documentation = "https://github.com/arvytechnolgies/zenv#readme"
keywords = ["secrets", "security", "dotenv", "cli", "encryption"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"
authors = ["arvytechnolgies <contact@arvytechnolgies.com>"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
async-trait = "0.1"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
keyring = "2.3"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.21"
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
